--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
     <main>
         <header>
-            <h1> Título do Site</h1>
+            <h1> Curso de HTML5 com CSS3</h1>
         </header>
              <article>
-            Texto artigo 001
+                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi odio vero ab suscipit dolorem vel minima, architecto, nostrum officiis veniam tenetur eius perferendis! Eaque saepe, perspiciatis aut consectetur aliquam minus?
             </article>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Curso de Javascript</h1>
         </header>
             <article>
-            Texto artigo 002
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eos qui modi repellat saepe nemo animi distinctio eius cum aliquam. Totam commodi consequuntur modi sed nulla est placeat voluptate ex!
             </article>
     </main>
     
