--- a/index.html
+++ b/index.html
@@ -9,16 +9,17 @@
 <body>
     <main>
         <header>
-            <h1> Curso de HTML5 com CSS3</h1>
+            <h1> Cursos Grátis</h1>
         </header>
              <article>
-                 Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi odio vero ab suscipit dolorem vel minima, architecto, nostrum officiis veniam tenetur eius perferendis! Eaque saepe, perspiciatis aut consectetur aliquam minus?
+                 <h2>Curso de HTML5 com CSS3</h2>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi odio vero ab suscipit dolorem vel minima, architecto, nostrum officiis veniam tenetur eius perferendis! Eaque saepe, perspiciatis aut consectetur aliquam minus? </p>
             </article>
         <header>
-            <h1>Curso de Javascript</h1>
+            <h2>Curso de Javascript</h2>
         </header>
             <article>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsa eos qui modi repellat saepe nemo animi distinctio eius cum aliquam. Totam commodi consequuntur modi sed nulla est placeat voluptate ex!
+           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, similique! Magni saepe nemo dolorem est ut at voluptatibus quod quis, officiis aliquid totam eius sapiente, repellendus aut quibusdam obcaecati ab?</p>
             </article>
     </main>
     
