--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi odio vero ab suscipit dolorem vel minima, architecto, nostrum officiis veniam tenetur eius perferendis! Eaque saepe, perspiciatis aut consectetur aliquam minus? </p>
             </article>
         <header>
-            <h2>Curso de Javascript</h2>
+            <h2>Curso de JavaScript</h2>
         </header>
             <article>
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, similique! Magni saepe nemo dolorem est ut at voluptatibus quod quis, officiis aliquid totam eius sapiente, repellendus aut quibusdam obcaecati ab?</p>
