--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <main>
         <header>
             <h1> Cursos Grátis</h1>
-            <img src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
+            <img class="lado" src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
              <article>
                  <h2>Curso de HTML5 com CSS3</h2>
+                 <img src="imagens/curso-html-css.png" alt="Curso HTML">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi odio vero ab suscipit dolorem vel minima, architecto, nostrum officiis veniam tenetur eius perferendis! Eaque saepe, perspiciatis aut consectetur aliquam minus? </p>
             </article>
-        <header>
+            <article> 
             <h2>Curso de JavaScript</h2>
-        </header>
-            <article>
+            <img class="lado" src="imagens/curso-javascript.png" alt="">
            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, similique! Magni saepe nemo dolorem est ut at voluptatibus quod quis, officiis aliquid totam eius sapiente, repellendus aut quibusdam obcaecati ab?</p>
             </article>
     </main>
