--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
     <main>
         <header>
             <h1> Cursos Grátis</h1>
-            <img class="lado" src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
+            <img  src="imagens/curso-em-video-cor.png" alt="Curso em Vídeo">
         </header>
              <article>
                  <h2>Curso de HTML5 com CSS3</h2>
-                 <img src="imagens/curso-html-css.png" alt="Curso HTML">
+                 <img class="lado" src="imagens/curso-html-css.png" alt="Curso HTML">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sequi odio vero ab suscipit dolorem vel minima, architecto, nostrum officiis veniam tenetur eius perferendis! Eaque saepe, perspiciatis aut consectetur aliquam minus? </p>
+                <p><a href="curso_de_html.html">Acesse o curso de HTML 5</a></p>
             </article>
             <article> 
-            <h2>Curso de JavaScript</h2>
-            <img class="lado" src="imagens/curso-javascript.png" alt="">
-           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, similique! Magni saepe nemo dolorem est ut at voluptatibus quod quis, officiis aliquid totam eius sapiente, repellendus aut quibusdam obcaecati ab?</p>
+                <h2>Curso de JavaScript</h2>
+                <img class="lado" src="imagens/curso-javascript.png" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia, similique! Magni saepe nemo dolorem est ut at voluptatibus quod quis, officiis aliquid totam eius sapiente, repellendus aut quibusdam obcaecati ab?</p>
+                <p><a href="curso_de_javascript.html">Acesse o curso de JavaScript</a></p>
             </article>
     </main>
     
