--- a/curso_de_html.html
+++ b/curso_de_html.html
@@ -12,6 +12,10 @@
             <article>
                  <h1>Curso de HTML5 com CSS3</h1>
                 <p>A HTML é uma linguagem de marcação para a criação de sites. Atualmente na versão 5, ela usa semântica dos elementos para criar o conteúdo de uma página Web. Com as CSS, criamos as configurações visuais que um site vai ter. </p>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/F74GKCLXUWM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                <a href="index.html"><img src="imagens/btn-back.png" alt="Voltar"></a>
             </article>
     </main>
     
