--- a/curso_de_javascript.html
+++ b/curso_de_javascript.html
@@ -12,6 +12,10 @@
             <article> 
                 <h1>Curso de JavaScript</h1>
                 <p>JavaScript é uma linguagem de script criada para aumentar a interatividade entre um site e seus visitantes. Os códigos em JS são executados dentro do navegador e dão acesso aos elementos GTML por meio do DOM. </p>
+
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/Ptbk2af68e8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+                <a href="index.html"><img src="imagens/btn-back.png" alt="Voltar"></a>
             </article>
     </main>
     
